<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.agent.PickupAgentActivity">

    <Toolbar
        android:id="@+id/pageStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pickup_agent"
            android:textSize="18sp"
            android:textStyle="bold" />
    </Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/pageStatus"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/parcelStatusText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parcel_picked_and_going_to_hub"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <View
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <include
            android:id="@+id/parcelInfo"
            layout="@layout/fragment_parcel_info" />

        <View
            android:layout_width="match_parent"
            android:layout_height="12dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/parcelToNextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"

            android:text="@string/take_the_parcel" />


    </LinearLayout>

</RelativeLayout>