<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.hub.PickupHubActivity">

    <Toolbar
        android:id="@+id/header_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hub_manager"
            android:textSize="18sp"
            android:textStyle="bold" />


    </Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header_status"
        android:gravity="center"
        android:orientation="vertical">

        <include
            android:id="@+id/parcelInfo"
            layout="@layout/fragment_parcel_info" />


        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/assign_pickup_agent_sajid_for_this_parcel"
                android:textSize="18sp"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/assignPickupAgentButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/black"
                android:text="@string/assign_and_goto_pickup_agent" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>