<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.merchant.MerchantHomeActivity">

    <Toolbar
        android:id="@+id/screen_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:title="@string/merchant_home" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/screen_title"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recipient_s_name"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="11sp" />

                <EditText
                    android:id="@+id/recipient_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="name"
                    android:background="@drawable/edit_text_border"
                    android:hint="@string/recipient_s_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:nextFocusForward="@id/recipient_phone"
                    android:padding="8dp" />
            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/recipient_s_phone"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="11sp" />

                <EditText
                    android:id="@+id/recipient_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="phone"
                    android:background="@drawable/edit_text_border"
                    android:hint="@string/recipient_s_phone"
                    android:inputType="phone"
                    android:nextFocusForward="@id/delivery_address"
                    android:padding="8dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/delivery_address"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="11sp" />

                <EditText
                    android:id="@+id/delivery_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="postalAddress"
                    android:background="@drawable/edit_text_border"
                    android:hint="@string/delivery_address"
                    android:inputType="text"
                    android:nextFocusForward="@string/amount_to_collect"
                    android:padding="8dp" />
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/amount_to_collect"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="11sp" />

                <EditText
                    android:id="@+id/amount_to_collect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:background="@drawable/edit_text_border"
                    android:hint="@string/amount_to_collect"
                    android:inputType="numberDecimal"
                    android:padding="8dp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="20sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/submit_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="@color/black"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:cornerRadius="12dp" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>